      the class, not the mapped selectable, as the source of
      column attributes - so a warning is still issued.
      
- sql
    - Fixed bug with union() when applied to non-Table connected
      select statements

- engines
    - Pool listeners can now be provided as a dictionary of
      callables or a (possibly partial) duck-type of
      PoolListener, your choice.

0.4.5
=====
- orm
    - A small change in behavior to session.merge() - existing
      objects are checked for based on primary key attributes, not
      necessarily _instance_key.  So the widely requested
      capability, that:

            x = MyObject(id=1)
            x = sess.merge(x)

      will in fact load MyObject with id #1 from the database if
      present, is now available.  merge() still copies the state
      of the given object to the persistent one, so an example
      like the above would typically have copied "None" from all
      attributes of "x" onto the persistent copy.  These can be
      reverted using session.expire(x).

    - Also fixed behavior in merge() whereby collection elements
      present on the destination but not the merged collection
      were not being removed from the destination.

    - Added a more aggressive check for "uncompiled mappers",
      helps particularly with declarative layer [ticket:995]

    - The methodology behind "primaryjoin"/"secondaryjoin" has
      been refactored.  Behavior should be slightly more
      intelligent, primarily in terms of error messages which
      have been pared down to be more readable.  In a slight
      number of scenarios it can better resolve the correct
      foreign key than before.

    - Added comparable_property(), adds query Comparator
      behavior to regular, unmanaged Python properties

    - The functionality of query.with_polymorphic() has been
      added to mapper() as a configuration option.

      It's set via several forms:

            with_polymorphic='*'